# AI_FLow_Framework

./: .dockerignore  .editorconfig  .env.example  .env.langfuse.example  .env.production.example  .gitignore  .pre-commit-config.yaml  07_AI_Flow_Framwork.code-workspace  CLAUDE.md  Dockerfile  FEATURES.md  Makefile  README.md  STUB_INVENTORY.md  aiflow.yaml  alembic.ini  docker-compose.langfuse.yml  docker-compose.prod.yml  docker-compose.vault.yml  docker-compose.yml  pyproject.toml  rxconfig.py
.claude/: CLAUDE_v1.2.2_FULL_BACKUP.md  session-restart-prompt.md  settings.json  settings.local.json
.claude/agents/: architect.md  plan-validator.md  qa-tester.md  security-reviewer.md
.claude/commands/: auto-sprint.md  dev-step.md  implement.md  lint-check.md  live-test.md  new-module.md  new-pipeline.md  new-prompt.md  new-skill.md  new-step.md  (+22 more)
.github/: CODEOWNERS
01_PLAN/: 00_EXECUTIVE_SUMMARY.md  00_GAPS_AND_FIXES.md  00_VALIDATION_REPORT.md  01_ARCHITECTURE.md  02_DIRECTORY_STRUCTURE.md  03_DATABASE_SCHEMA.md  04_IMPLEMENTATION_PHASES.md  05_TECH_STACK.md  06_CLAUDE_CODE_INTEGRATION.md  07_VERSION_LIFECYCLE.md  100_AIFLOW_v2_ARCHITECTURE_REFINEMENT_OVERVIEW.md  100_b_AIFLOW_v2_DOMAIN_CONTRACTS.md  100_c_AIFLOW_v2_STATE_LIFECYCLE_MODEL.md  100_d_AIFLOW_v2_MIGRATION_PLAYBOOK.md  100_e_AIFLOW_v2_CAPACITY_PLANNING.md  100_f_AIFLOW_v2_HITL_WORKLOAD_MODEL.md  101_AIFLOW_v2_COMPONENT_TRANSFORMATION_PLAN.md  102_AIFLOW_v2_FIRST_REVIEW_CYCLE.md  103_AIFLOW_v2_FINAL_VALIDATION.md  104_AIFLOW_v2_FINAL_MASTER_INDEX.md  105_AIFLOW_v2_P0_P4_HARDENING_RECORD.md  106_AIFLOW_v2_PHASE_1a_IMPLEMENTATION_GUIDE.md  10_BUSINESS_AUDIT_DOCS.md  110_USE_CASE_FIRST_REPLAN.md  111_SPRINT_N_COST_GUARDRAIL_BUDGET_PLAN.md  112_SPRINT_O_UC3_ATTACHMENT_INTENT_PLAN.md  113_SPRINT_P_LLM_CONTEXT_BODY_MIXED_PLAN.md  114_CAPABILITY_ROADMAP_Q_R_S.md  115_SPRINT_Q_INTENT_EXTRACTION_UNIFICATION.md  116_SPRINT_S_FUNCTIONAL_VECTOR_DB_PLAN.md  117_SPRINT_T_PROMPTWORKFLOW_MIGRATION_PLAN.md  118_SPRINT_U_OPERATIONAL_HARDENING_PLAN.md  119_SPRINT_V_DOCUMENT_RECOGNIZER_PLAN.md  11_REAL_WORLD_SKILLS_WALKTHROUGH.md  120_SPRINT_W_KICKOFF_PLAN.md  121_SPRINT_X_INTAKE_PIPELINE_RAG_CHAT_PLAN.md  121_SPRINT_X_QUALITY_PUSH_PLAN.md  12_SKILL_INTEGRATION.md  14_FRONTEND.md  15_ML_MODEL_INTEGRATION.md  (+89 more)
aiflow-admin/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
aiflow-ui/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
aiflow_ui/: aiflow_ui.py
alembic/: env.py
docs/: SPRINT_HISTORY.md  airgapped_deployment.md  cost_surfaces_inventory.md  docling_cold_start.md  honest_alignment_audit.md  phase_1a_acceptance_report.md  phase_1a_pr_description.md  phase_1a_retro.md  phase_1b_pr_description.md  phase_1c_acceptance_report.md  phase_1c_pr_description.md  phase_1c_retro.md  phase_1d_pr_description.md  phase_1d_retro.md  post_sprint_v_audit.md  post_sprint_w_audit.md  quarantine.md  secrets_inventory.md  sprint_j_pr_description.md  sprint_j_retro.md  sprint_l_pr_description.md  sprint_m_plan.md  sprint_m_pr_description.md  sprint_m_retro.md  sprint_n_plan.md  sprint_n_pr_description.md  sprint_n_retro.md  sprint_o_plan.md  sprint_o_pr_description.md  sprint_o_retro.md  sprint_p_pr_description.md  sprint_p_retro.md  sprint_q_pr_description.md  sprint_q_retro.md  sprint_r_pr_description.md  sprint_r_retro.md  sprint_s_pr_description.md  sprint_s_retro.md  sprint_s_s143_pr_description.md  sprint_s_s144_pr_description.md  (+16 more)
prompts/: session_17_a5_guardrail_framework.md
scripts/: _common.py  audit_cost_recording.py  audit_customer_references.py  bootstrap_bge_m3.py  bootstrap_langfuse.py  check_environment.sh  check_openapi_drift.py  check_promptfoo_results.py  cost_baseline.py  eml_viewer.py  export_openapi.py  fetch_emails_graph.py  fetch_emails_imap.py  fetch_outlook_emails.py  generate_jwt_keys.sh  measure_doc_recognizer_accuracy.py  measure_uc1_golden_path.py  measure_uc3_attachment_extract_cost.py  measure_uc3_attachment_intent.py  measure_uc3_baseline.py  measure_uc3_llm_context.py  promptfoo_provider.py  run_nightly_rag_metrics.py  run_quality_baseline.sh  seed_admin.py  seed_routing_runs.py  seed_vault_dev.py  send_notification.py  smoke_test.sh  start_stack.cmd  start_stack.sh  test_email_from_inbox.py  test_ml_course_pipeline.py  test_phase0_outlook_e2e.py  test_real_skills.py  warmup_docling.py
session_prompts/: NEXT.md  RESUME_AFTER_RESTART.md  S100_v1_4_6_sprint_j_kickoff_prompt.md  S101_v1_4_6_sprint_j_chunker_prompt.md  S102_uc2_rag_ui_prompt.md  S103_uc2_rag_retrieval_baseline_prompt.md  S104_sprint_j_close_pr.md  S105_v1_4_7_sprint_k_kickoff_prompt.md  S106_v1_4_7_contract_unify_and_glue_prompt.md  S107_v1_4_7_intent_routing_policy_prompt.md  S108_v1_4_7_uc3_ui_emails_scan_prompt.md  S111_v1_4_8_monitoring_langfuse_drilldown_prompt.md  S112_costs_cost_cap_prompt.md  S113_cross_uc_regression_prompt.md  S114_v1_4_9_vault_langfuse_kickoff_prompt.md  S115_v1_4_9_sprint_m_kickoff_prompt.md  S116_v1_4_9_vault_hvac_impl_prompt.md  S117_vault_settings_consumer_migration_prompt.md  S118_langfuse_selfhosted_prompt.md  S119_sprint_m_close_prompt.md  S120_sprint_n_kickoff_prompt.md  S121_tenant_budgets_service_prompt.md  S122_preflight_cost_guardrail_prompt.md  S123_budget_admin_ui_prompt.md  S124_sprint_n_close_prompt.md  S125_triage_next_sprint_prompt.md  S126_sprint_o_kickoff_prompt.md  S128_sprint_o_classifier_consumption_prompt.md  S130_sprint_o_close_pr_prompt.md  S135_sprint_q_extraction_wiring_prompt.md  S137_sprint_q_uc1_golden_path_prompt.md  S138_sprint_q_close_prompt.md  S139_sprint_r_prompt_workflow_model_prompt.md  S140_sprint_r_workflow_admin_ui_prompt.md  S141_sprint_r_skill_workflow_migration_prompt.md  S142_sprint_r_close_prompt.md  S145_v1_5_2_sprint_s_mrr5_nightly_prompt.md  S146_sprint_s_close_prompt.md  S147_v1_5_3_sprint_t_kickoff_prompt.md  S148_v1_5_3_email_intent_workflow_migration_prompt.md  (+35 more)
skills/: CLAUDE.md
tests/: CLAUDE.md  conftest.py  regression_matrix.yaml  test_suites.yaml
(+1549 files in other folders)
